objects/Campaign_Event_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Bank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Event Feedbacks</relationshipLabel>
        <relationshipName>Campaign_Event_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitors_present_at_the_Event__c</fullName>
        <label>Competitors Present at the Event</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Country__c</fullName>
        <label>Event Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lebanon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morocco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namibia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <inlineHelpText>Enter the Event Date. For Multiday event , enter the start Date.</inlineHelpText>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Government_Bodies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government Bodies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highlights__c</fullName>
        <inlineHelpText>(Include at least 2 bullet points)</inlineHelpText>
        <label>Highlights</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industrials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industrials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrators__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Makers__c</fullName>
        <label>Key Decision Makers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Level_Of_Attendees__c</fullName>
        <label>Level of Attendees</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Local_Authorities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Authorities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lowlights__c</fullName>
        <label>Lowlights</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Market_Insights__c</fullName>
        <label>Market Insights</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Leads__c</fullName>
        <label>Number of Leads</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Would_you_recommend_attending_this_event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would you recommend attending this event</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Event Feedback</label>
    <nameField>
        <displayFormat>Evnt-{000000}</displayFormat>
        <label>Campaign Event Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Event Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>